--- a/hack/static/css/style.css
+++ b/hack/static/css/style.css
@@ -2,32 +2,46 @@
 /* GENERAL STYLING */
 /*--------------------------------------------------------------*/
 
+/* Define base colours in light mode */
 :root {
-	/* Define base colours in light mode */
-	--background-color: #ffffff;
-	--text-color: #1e1e1e;
+	/* Primary colors */
 	--primary-color: #ff2b85;
-	--secondary-color: #f5f5f5;
-	--border-color: #d9d9d9;
 	--primary-dark: #A11350;
 	--primary-light: #FFACCF;
+	/* Neutral */
+	--background-color: #ffffff;
+	--hover-color: #f7f7f7;
+	--text-color: #262626;
+	--secondary-color: #f5f5f5;
+	--border-color: #d9d9d9;
+	--link-color: var(--primary-dark);
+	--button-primary-bg: var(--primary-color);
+	--button-primary-text: #fff;
+	--button-color: var(--primary-color);
 }
 
+/* Invert colours for dark mode */
 .dark-mode {
-	/* Invert colours for dark mode */
-	--background-color: #1e1e1e;
+	--button-color: var(--primary-dark);
+	--link-color: var(--text-color);
+	/* Neutral */
+	--background-color: #262626;
+	--hover-color: #2e2e30;
 	--text-color: #ffffff;
-	--primary-color: #ff4b9e;
 	--secondary-color: #2a2a2a;
 	--border-color: #444444;
 }
 
 body {
-	font-size: 3rem;
+	font-size: 2rem;
 	background-color: var(--background-color);
 	color: var(--text-color);
 	font-family: 'Montserrat', sans-serif;
 	margin: 0px;
+}
+
+.body-content {
+	padding: 3rem;
 }
 
 /*--------------------------------------------------------------*/
